aws/argocd/addons/argocd/httproute.yaml
# Auto-generated file, do not edit directly
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: iceberg-interface-gateway
      namespace: envoy-gateway-system
      sectionName: https-wildcard
  hostnames:
    - argocd.mhaigh-iceberg-interface.k8sbackup.dev
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
